--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saas-landing-xora",
+  "name": "saas_landing_page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-slidedown": "^2.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
